--- a/template-parts/_wp.scss
+++ b/template-parts/_wp.scss
@@ -127,7 +127,7 @@ blockquote.is-style-large {
 }
 
 .aligncenter {
-  margin: 0;
+  margin: 0 auto;
 }
 
 .wp-block-columns {
